--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,40 @@ body {
   padding: 0;
 }
 
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* min-width: 320px; */
+  box-shadow: 0px 0px 5px 1px #FFFFFF;
+  padding: 20px;
+  border-radius: 5px;
+}
+label{
+  width: 100%;
+  color: #fff;
+}
 input{
-  width: 250px;
+  width: calc(100% - 30px);
   height: 40px;
   padding: 0 15px;
+  margin: 10px 0;
   border-radius: 5px;
-  outline: none;
+  border: none;
   font-size: 25px;
+  /* text-indent: 0%; */
 
+}
+input:focus{
+ outline: none;
+}
+.submit{
+  text-transform: uppercase;
+cursor: pointer;
+width: 100%;
+}
+
+.error{
+  color: red;
 }
