--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,14 @@ input:focus{
 }
 .submit{
   text-transform: uppercase;
+  width: calc(100% - 30px);
+    height: 40px;
+    padding: 0 15px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: none;
+    font-size: 25px;
+    
 cursor: pointer;
 width: 100%;
 }
